--- a/src/doc/scss/_tables.scss
+++ b/src/doc/scss/_tables.scss
@@ -2,16 +2,16 @@
 
 table.qc-table {
   margin-bottom: 0;
-  background-color: token-value(color,white);
+  background-color: token-value(color white);
   width: 100%;
   max-width: 100%;
   overflow: auto;
   border-collapse: collapse;
 
   &>thead {
-    background-color: token-value(color,blue,dark);
+    background-color: token-value(color blue medium);
     color: token-value(color,white);
-    border: 1px solid token-value(color,blue,dark);
+    border: 1px solid token-value(color blue medium);
 
     th{
       @include content-font(md, bold);
@@ -21,7 +21,7 @@ table.qc-table {
   thead th, tbody th, tbody td {
     vertical-align: middle;
     text-align: left;
-    padding: token-value(spacer, xs);
+    padding: token-value(spacer, sm);
   }
 
 
